@@ -113,7 +113,7 @@ public class CommandClassAssociationV1 {
         int msgOffset = 2;
 
         // Process 'Grouping Identifier'
-        response.put("GROUPING_IDENTIFIER", new Integer(payload[msgOffset]));
+        response.put("GROUPING_IDENTIFIER", Integer.valueOf(payload[msgOffset]));
         msgOffset += 1;
 
         // Process 'Node ID'
@@ -170,7 +170,7 @@ public class CommandClassAssociationV1 {
         Map<String, Object> response = new HashMap<String, Object>();
 
         // Process 'Grouping Identifier'
-        response.put("GROUPING_IDENTIFIER", new Integer(payload[2]));
+        response.put("GROUPING_IDENTIFIER", Integer.valueOf(payload[2]));
 
         // Return the map of processed response data;
         return response;
@@ -240,15 +240,15 @@ public class CommandClassAssociationV1 {
         int msgOffset = 2;
 
         // Process 'Grouping Identifier'
-        response.put("GROUPING_IDENTIFIER", new Integer(payload[msgOffset]));
+        response.put("GROUPING_IDENTIFIER", Integer.valueOf(payload[msgOffset]));
         msgOffset += 1;
 
         // Process 'Max Nodes Supported'
-        response.put("MAX_NODES_SUPPORTED", new Integer(payload[msgOffset]));
+        response.put("MAX_NODES_SUPPORTED", Integer.valueOf(payload[msgOffset]));
         msgOffset += 1;
 
         // Process 'Reports to Follow'
-        response.put("REPORTS_TO_FOLLOW", new Integer(payload[msgOffset]));
+        response.put("REPORTS_TO_FOLLOW", Integer.valueOf(payload[msgOffset]));
         msgOffset += 1;
 
         // Process 'NodeID'
@@ -316,7 +316,7 @@ public class CommandClassAssociationV1 {
         int msgOffset = 2;
 
         // Process 'Grouping Identifier'
-        response.put("GROUPING_IDENTIFIER", new Integer(payload[msgOffset]));
+        response.put("GROUPING_IDENTIFIER", Integer.valueOf(payload[msgOffset]));
         msgOffset += 1;
 
         // Process 'Node ID'
@@ -408,7 +408,7 @@ public class CommandClassAssociationV1 {
         Map<String, Object> response = new HashMap<String, Object>();
 
         // Process 'Supported Groupings'
-        response.put("SUPPORTED_GROUPINGS", new Integer(payload[2]));
+        response.put("SUPPORTED_GROUPINGS", Integer.valueOf(payload[2]));
 
         // Return the map of processed response data;
         return response;
