@@ -163,7 +163,7 @@ public class CommandClassNetworkManagementInclusionV1 {
         Map<String, Object> response = new HashMap<String, Object>();
 
         // Process 'Seq. No'
-        response.put("SEQ_NO", new Integer(payload[2]));
+        response.put("SEQ_NO", Integer.valueOf(payload[2]));
 
         // Process 'Mode'
         switch ((int) payload[4]) {
@@ -341,7 +341,7 @@ public class CommandClassNetworkManagementInclusionV1 {
         int msgOffset = 2;
 
         // Process 'Seq. No'
-        response.put("SEQ_NO", new Integer(payload[msgOffset]));
+        response.put("SEQ_NO", Integer.valueOf(payload[msgOffset]));
         msgOffset += 1;
 
         // Process 'Status'
@@ -364,33 +364,33 @@ public class CommandClassNetworkManagementInclusionV1 {
         msgOffset += 1;
 
         // Process 'New Node ID'
-        response.put("NEW_NODE_ID", new Integer(payload[msgOffset]));
+        response.put("NEW_NODE_ID", Integer.valueOf(payload[msgOffset]));
         msgOffset += 1;
 
         // Process 'Node Info Length'
-        response.put("NODE_INFO_LENGTH", new Integer(payload[msgOffset]));
+        response.put("NODE_INFO_LENGTH", Integer.valueOf(payload[msgOffset]));
         msgOffset += 1;
 
         // Process 'Properties1'
-        response.put("CAPABILITY", new Integer(payload[msgOffset] & 0x7F));
-        response.put("LISTENING", new Boolean((payload[msgOffset] & 0x80) != 0));
+        response.put("CAPABILITY", Integer.valueOf(payload[msgOffset] & 0x7F));
+        response.put("LISTENING", Boolean.valueOf((payload[msgOffset] & 0x80) != 0));
         msgOffset += 1;
 
         // Process 'Properties2'
-        response.put("SECURITY", new Integer(payload[msgOffset] & 0x7F));
-        response.put("OPT", new Boolean((payload[msgOffset] & 0x80) != 0));
+        response.put("SECURITY", Integer.valueOf(payload[msgOffset] & 0x7F));
+        response.put("OPT", Boolean.valueOf((payload[msgOffset] & 0x80) != 0));
         msgOffset += 1;
 
         // Process 'Basic Device Class'
-        response.put("BASIC_DEVICE_CLASS", new Integer(payload[msgOffset]));
+        response.put("BASIC_DEVICE_CLASS", Integer.valueOf(payload[msgOffset]));
         msgOffset += 1;
 
         // Process 'Generic Device Class'
-        response.put("GENERIC_DEVICE_CLASS", new Integer(payload[msgOffset]));
+        response.put("GENERIC_DEVICE_CLASS", Integer.valueOf(payload[msgOffset]));
         msgOffset += 1;
 
         // Process 'Specific Device Class'
-        response.put("SPECIFIC_DEVICE_CLASS", new Integer(payload[msgOffset]));
+        response.put("SPECIFIC_DEVICE_CLASS", Integer.valueOf(payload[msgOffset]));
         msgOffset += 1;
 
         // Process 'Command Class'
@@ -453,7 +453,7 @@ public class CommandClassNetworkManagementInclusionV1 {
         Map<String, Object> response = new HashMap<String, Object>();
 
         // Process 'Seq. No'
-        response.put("SEQ_NO", new Integer(payload[2]));
+        response.put("SEQ_NO", Integer.valueOf(payload[2]));
 
         // Process 'Mode'
         switch ((int) payload[4]) {
@@ -535,7 +535,7 @@ public class CommandClassNetworkManagementInclusionV1 {
         Map<String, Object> response = new HashMap<String, Object>();
 
         // Process 'Seq. No'
-        response.put("SEQ_NO", new Integer(payload[2]));
+        response.put("SEQ_NO", Integer.valueOf(payload[2]));
 
         // Process 'Status'
         switch ((int) payload[3]) {
@@ -551,7 +551,7 @@ public class CommandClassNetworkManagementInclusionV1 {
         }
 
         // Process 'NodeID'
-        response.put("NODEID", new Integer(payload[4]));
+        response.put("NODEID", Integer.valueOf(payload[4]));
 
         // Return the map of processed response data;
         return response;
@@ -609,10 +609,10 @@ public class CommandClassNetworkManagementInclusionV1 {
         Map<String, Object> response = new HashMap<String, Object>();
 
         // Process 'Seq. No'
-        response.put("SEQ_NO", new Integer(payload[2]));
+        response.put("SEQ_NO", Integer.valueOf(payload[2]));
 
         // Process 'Node ID'
-        response.put("NODE_ID", new Integer(payload[3]));
+        response.put("NODE_ID", Integer.valueOf(payload[3]));
 
         // Return the map of processed response data;
         return response;
@@ -675,7 +675,7 @@ public class CommandClassNetworkManagementInclusionV1 {
         Map<String, Object> response = new HashMap<String, Object>();
 
         // Process 'Seq. No'
-        response.put("SEQ_NO", new Integer(payload[2]));
+        response.put("SEQ_NO", Integer.valueOf(payload[2]));
 
         // Process 'Status'
         switch ((int) payload[3]) {
@@ -694,7 +694,7 @@ public class CommandClassNetworkManagementInclusionV1 {
         }
 
         // Process 'Node ID'
-        response.put("NODE_ID", new Integer(payload[4]));
+        response.put("NODE_ID", Integer.valueOf(payload[4]));
 
         // Return the map of processed response data;
         return response;
@@ -778,10 +778,10 @@ public class CommandClassNetworkManagementInclusionV1 {
         Map<String, Object> response = new HashMap<String, Object>();
 
         // Process 'Seq. No'
-        response.put("SEQ_NO", new Integer(payload[2]));
+        response.put("SEQ_NO", Integer.valueOf(payload[2]));
 
         // Process 'Node ID'
-        response.put("NODE_ID", new Integer(payload[3]));
+        response.put("NODE_ID", Integer.valueOf(payload[3]));
 
         // Process 'tx Options'
         List<String> responseTxOptions = new ArrayList<String>();
@@ -820,7 +820,7 @@ public class CommandClassNetworkManagementInclusionV1 {
         response.put("TX_OPTIONS", responseTxOptions);
 
         // Process 'Mode'
-        response.put("MODE", new Integer(payload[5]));
+        response.put("MODE", Integer.valueOf(payload[5]));
 
         // Return the map of processed response data;
         return response;
@@ -883,7 +883,7 @@ public class CommandClassNetworkManagementInclusionV1 {
         Map<String, Object> response = new HashMap<String, Object>();
 
         // Process 'Seq. No'
-        response.put("SEQ_NO", new Integer(payload[2]));
+        response.put("SEQ_NO", Integer.valueOf(payload[2]));
 
         // Process 'Status'
         switch ((int) payload[3]) {
@@ -902,7 +902,7 @@ public class CommandClassNetworkManagementInclusionV1 {
         }
 
         // Process 'Node ID'
-        response.put("NODE_ID", new Integer(payload[4]));
+        response.put("NODE_ID", Integer.valueOf(payload[4]));
 
         // Return the map of processed response data;
         return response;
@@ -960,10 +960,10 @@ public class CommandClassNetworkManagementInclusionV1 {
         Map<String, Object> response = new HashMap<String, Object>();
 
         // Process 'Seq. No'
-        response.put("SEQ_NO", new Integer(payload[2]));
+        response.put("SEQ_NO", Integer.valueOf(payload[2]));
 
         // Process 'Node ID'
-        response.put("NODE_ID", new Integer(payload[3]));
+        response.put("NODE_ID", Integer.valueOf(payload[3]));
 
         // Return the map of processed response data;
         return response;
@@ -1016,7 +1016,7 @@ public class CommandClassNetworkManagementInclusionV1 {
         Map<String, Object> response = new HashMap<String, Object>();
 
         // Process 'Seq. No'
-        response.put("SEQ_NO", new Integer(payload[2]));
+        response.put("SEQ_NO", Integer.valueOf(payload[2]));
 
         // Process 'Status'
         switch ((int) payload[3]) {
@@ -1097,13 +1097,13 @@ public class CommandClassNetworkManagementInclusionV1 {
         Map<String, Object> response = new HashMap<String, Object>();
 
         // Process 'Seq. No'
-        response.put("SEQ_NO", new Integer(payload[2]));
+        response.put("SEQ_NO", Integer.valueOf(payload[2]));
 
         // Process 'Source Node ID'
-        response.put("SOURCE_NODE_ID", new Integer(payload[3]));
+        response.put("SOURCE_NODE_ID", Integer.valueOf(payload[3]));
 
         // Process 'Destination Node ID'
-        response.put("DESTINATION_NODE_ID", new Integer(payload[4]));
+        response.put("DESTINATION_NODE_ID", Integer.valueOf(payload[4]));
 
         // Return the map of processed response data;
         return response;
@@ -1156,7 +1156,7 @@ public class CommandClassNetworkManagementInclusionV1 {
         Map<String, Object> response = new HashMap<String, Object>();
 
         // Process 'Seq. No'
-        response.put("SEQ_NO", new Integer(payload[2]));
+        response.put("SEQ_NO", Integer.valueOf(payload[2]));
 
         // Process 'Status'
         switch ((int) payload[3]) {
@@ -1230,10 +1230,10 @@ public class CommandClassNetworkManagementInclusionV1 {
         Map<String, Object> response = new HashMap<String, Object>();
 
         // Process 'Seq. No'
-        response.put("SEQ_NO", new Integer(payload[2]));
+        response.put("SEQ_NO", Integer.valueOf(payload[2]));
 
         // Process 'Node ID'
-        response.put("NODE_ID", new Integer(payload[3]));
+        response.put("NODE_ID", Integer.valueOf(payload[3]));
 
         // Return the map of processed response data;
         return response;
@@ -1286,7 +1286,7 @@ public class CommandClassNetworkManagementInclusionV1 {
         Map<String, Object> response = new HashMap<String, Object>();
 
         // Process 'Seq. No'
-        response.put("SEQ_NO", new Integer(payload[2]));
+        response.put("SEQ_NO", Integer.valueOf(payload[2]));
 
         // Process 'Status'
         switch ((int) payload[3]) {
