@@ -136,16 +136,16 @@ public class CommandClassScreenAttributesV1 {
         Map<String, Object> response = new HashMap<String, Object>();
 
         // Process 'Properties1'
-        response.put("NUMBER_OF_LINES", new Integer(payload[2] & 0x1F));
+        response.put("NUMBER_OF_LINES", Integer.valueOf(payload[2] & 0x1F));
 
         // Process 'Number of Characters per Line'
-        response.put("NUMBER_OF_CHARACTERS_PER_LINE", new Integer(payload[3]));
+        response.put("NUMBER_OF_CHARACTERS_PER_LINE", Integer.valueOf(payload[3]));
 
         // Process 'Size of Line Buffer'
-        response.put("SIZE_OF_LINE_BUFFER", new Integer(payload[4]));
+        response.put("SIZE_OF_LINE_BUFFER", Integer.valueOf(payload[4]));
 
         // Process 'Numerical Presentation of a Character'
-        response.put("NUMERICAL_PRESENTATION_OF_A_CHARACTER", new Integer(payload[5]));
+        response.put("NUMERICAL_PRESENTATION_OF_A_CHARACTER", Integer.valueOf(payload[5]));
 
         // Return the map of processed response data;
         return response;
