@@ -114,7 +114,7 @@ public class CommandClassWakeUpV2 {
         // Process 'Seconds'
 
         // Process 'NodeID'
-        response.put("NODEID", new Integer(payload[5]));
+        response.put("NODEID", Integer.valueOf(payload[5]));
 
         // Return the map of processed response data;
         return response;
@@ -206,7 +206,7 @@ public class CommandClassWakeUpV2 {
         // Process 'Seconds'
 
         // Process 'NodeID'
-        response.put("NODEID", new Integer(payload[5]));
+        response.put("NODEID", Integer.valueOf(payload[5]));
 
         // Return the map of processed response data;
         return response;
