@@ -580,13 +580,13 @@ public class CommandClassWindowCoveringV1 {
         }
 
         // Process 'Current Value'
-        response.put("CURRENT_VALUE", new Integer(payload[3]));
+        response.put("CURRENT_VALUE", Integer.valueOf(payload[3]));
 
         // Process 'Target Value'
-        response.put("TARGET_VALUE", new Integer(payload[4]));
+        response.put("TARGET_VALUE", Integer.valueOf(payload[4]));
 
         // Process 'Duration'
-        response.put("DURATION", new Integer(payload[5]));
+        response.put("DURATION", Integer.valueOf(payload[5]));
 
         // Return the map of processed response data;
         return response;
@@ -641,7 +641,7 @@ public class CommandClassWindowCoveringV1 {
         Map<String, Object> response = new HashMap<String, Object>();
 
         // Process 'Properties1'
-        response.put("PARAMETER_COUNT", new Integer(payload[2] & 0x1F));
+        response.put("PARAMETER_COUNT", Integer.valueOf(payload[2] & 0x1F));
 
         // Process 'vg1'
 
@@ -731,7 +731,7 @@ public class CommandClassWindowCoveringV1 {
             }
 
             // Process 'Value'
-            variant.put("VALUE", new Integer(payload[4]));
+            variant.put("VALUE", Integer.valueOf(payload[4]));
 
             // Add to the list
             variantList.add(variant);
@@ -744,7 +744,7 @@ public class CommandClassWindowCoveringV1 {
         response.put("VG1", variantList);
 
         // Process 'Duration'
-        response.put("DURATION", new Integer(payload[5]));
+        response.put("DURATION", Integer.valueOf(payload[5]));
 
         // Return the map of processed response data;
         return response;
@@ -886,9 +886,9 @@ public class CommandClassWindowCoveringV1 {
         Map<String, Object> response = new HashMap<String, Object>();
 
         // Process 'Properties1'
-        response.put("RES1", new Integer(payload[2] & 0x3F));
-        response.put("UP_DOWN", new Boolean((payload[2] & 0x40) != 0));
-        response.put("RES2", new Boolean((payload[2] & 0x80) != 0));
+        response.put("RES1", Integer.valueOf(payload[2] & 0x3F));
+        response.put("UP_DOWN", Boolean.valueOf((payload[2] & 0x40) != 0));
+        response.put("RES2", Boolean.valueOf((payload[2] & 0x80) != 0));
 
         // Process 'Parameter ID'
         switch ((int) payload[3]) {
@@ -968,7 +968,7 @@ public class CommandClassWindowCoveringV1 {
         }
 
         // Process 'Duration'
-        response.put("DURATION", new Integer(payload[4]));
+        response.put("DURATION", Integer.valueOf(payload[4]));
 
         // Return the map of processed response data;
         return response;
